# ClipPaste

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/projects/e--Copy-ClipPaste/memory/: MEMORY.md
.github/workflows/: release.yml
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  utils.ts
frontend/src/components/: ClipCard.tsx  ClipList.tsx  ControlBar.tsx  EditClipModal.tsx  FolderModal.tsx  NoteModal.tsx  SettingsPanel.tsx
frontend/src/components/settings/: DashboardTab.tsx  FoldersTab.tsx  GeneralTab.tsx  HotkeysTab.tsx
frontend/src/hooks/: useClipActions.ts  useDragDrop.ts  useFolderActions.ts  useFolderPreview.ts  useKeyboard.ts  useScratchpad.ts
frontend/src/types/: index.ts
frontend/src/windows/: ScratchpadWindow.tsx
product_pages/: _config.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  database.rs  lib.rs  main.rs  models.rs  tests.rs  utils.rs
src-tauri/src/commands/: clips.rs  data.rs  folders.rs  helpers.rs  mod.rs  scratchpads.rs  settings.rs  window.rs
src-tauri/src/sync/: mod.rs  models.rs  protocol.rs
tests/: package.json  pnpm-lock.yaml  vitest.config.ts
tests/components/: ClipCard.test.tsx  ClipList.test.tsx
