[package]
name = "clippaste"
version = "1.8.2"
description = "A beautiful clipboard history manager"
authors = ["Phieu-Tran"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "chrono", "uuid", "runtime-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }
futures = "0.3"
dirs = "5"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
once_cell = "1"
base64 = "0.22.1"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2.8.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-aptabase = "1"
tauri-plugin-opener = "2"
log = "0.4.29"
dark-light = "2.0.0"
tauri-plugin-clipboard-x = "2.0.1"
zip = "2"
lru = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
tiny_http = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Security", "Win32_System_DataExchange", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_SystemInformation", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Com", "Win32_UI_HiDpi"] }
window-vibrancy = { git = "https://github.com/Phieu-Tran/window-vibrancy.git", rev = "67a85de" }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy-macos = { package = "window-vibrancy", version = "0.5" }
core-graphics = "0.24"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
